--- a/site.html
+++ b/site.html
@@ -1,79 +1,76 @@
-<!-- index.html - Мини-приложение Telegram с казино-слотом -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Казино Слот</title>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      background: #111;
-      color: #fff;
-      padding: 30px;
-    }
-    .slot {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 15px;
-      margin: 40px 0;
-    }
-    .reel {
-      width: 60px;
-      height: 60px;
-      background: #333;
-      border: 2px solid #fff;
-      font-size: 2em;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 10px;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 1.2em;
-      background: gold;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    button:hover {
-      background: orange;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Казино слот</title>
+    <style>
+        /* Стили для сайта */
+        .slot {
+            display: flex;
+            justify-content: center;
+            margin: 20px;
+        }
+        .reel {
+            width: 80px;
+            height: 80px;
+            border: 2px solid #000;
+            margin: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2rem;
+        }
+        .button {
+            padding: 10px 20px;
+            font-size: 1.5rem;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-  <h1>Слот-машина</h1>
-  <div class="slot">
-    <div class="reel" id="r1">🍒</div>
-    <div class="reel" id="r2">🍋</div>
-    <div class="reel" id="r3">🍊</div>
-  </div>
-  <button onclick="spin()">Крутить</button>
 
-  <script>
-    const emojis = ['🍒', '🍋', '🍊', '🍉', '⭐', '💎'];
+<div class="slot">
+    <div id="reel1" class="reel">🍒</div>
+    <div id="reel2" class="reel">🍒</div>
+    <div id="reel3" class="reel">🍒</div>
+</div>
 
-    function spin() {
-      const r1 = document.getElementById('r1');
-      const r2 = document.getElementById('r2');
-      const r3 = document.getElementById('r3');
+<button class="button" id="spinBtn">Крутить</button>
+<p id="resultText"></p>
 
-      const delay = (ms) => new Promise(res => setTimeout(res, ms));
+<script>
+    let attempts = 0;
 
-      const spinReel = async (reel) => {
-        for (let i = 0; i < 20; i++) {
-          reel.textContent = emojis[Math.floor(Math.random() * emojis.length)];
-          await delay(50);
+    const symbols = ["🍒", "🍋", "🍉", "💎", "🍇"];
+    const reels = [document.getElementById("reel1"), document.getElementById("reel2"), document.getElementById("reel3")];
+    const resultText = document.getElementById("resultText");
+
+    document.getElementById("spinBtn").addEventListener("click", () => {
+        if (attempts < 2) {
+            spinReels(false);
+        } else {
+            spinReels(true);
         }
-      };
+    });
 
-      Promise.all([spinReel(r1), spinReel(r2), spinReel(r3)]);
+    function spinReels(isFinalSpin) {
+        for (let i = 0; i < 3; i++) {
+            let randomSymbol = symbols[Math.floor(Math.random() * symbols.length)];
+            reels[i].textContent = randomSymbol;
+        }
+
+        attempts++;
+
+        if (isFinalSpin) {
+            if (reels[0].textContent === reels[1].textContent && reels[1].textContent === reels[2].textContent) {
+                resultText.textContent = "Поздравляем! Вы выиграли Бонуску!";
+            } else {
+                resultText.textContent = "Попробуйте снова!";
+            }
+        }
     }
-  </script>
+</script>
+
 </body>
 </html>
